# rmux-agent-automation

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
docs/agents/: domain.md
docs/plans/: rmux-claude-wrapper.md
src/: main.rs
