[package]
name = "claude-rmux-runner"
version = "0.1.0"
edition = "2021"
description = "Standalone runner that drives an interactive Claude session inside a fresh rmux-owned session, sends a prompt file, waits for a result marker, and emits an audit trace and metadata JSON."
license = "MIT"
repository = "https://github.com/LyKex/rmux-agent-automation"
readme = "README.md"
keywords = ["claude", "rmux", "agent", "automation", "benchmark"]
categories = ["command-line-utilities"]

# Optimize the installed binary (`cargo install` builds in release).
[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
clap = { version = "4", features = ["derive"] }
rmux-sdk = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
